header section done

--- a/index.html
+++ b/index.html
@@ -7,6 +7,27 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h2>Influencer Gears</h2>
+    <!-- Header Section Start -->
+     <header class="container">
+        <div class="header_section">
+            <div class="logo">
+                <h4 class="brand_name">Influencer products</h4>
+            </div>
+            <div class="nav">
+                <ul class="nav_lists">
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Products</a></li>
+                    <li><a href="#">Inventory</a></li>
+                    <li><a href="#">Sign up</a></li>
+                    <li><a href="#">Login</a></li>
+                    <li><a href="#"><i class="fa-solid fa-magnifying-glass"></i></a></li>
+                    <li><a href="#"><i class="fa-solid fa-cart-shopping"></i></a></li>
+                </ul>
+            </div>
+        </div>
+     </header>
+    <!-- Header Section End -->
+    <!-- Font Awesome -->
+     <script src="https://kit.fontawesome.com/12c01ddc8e.js" crossorigin="anonymous"></script>
 </body>
 </html>
