banner section done

--- a/index.html
+++ b/index.html
@@ -27,6 +27,21 @@
         </div>
      </header>
     <!-- Header Section End -->
+    <!-- Banner Section Start -->
+     <section class="container">
+        <div class="banner_section">
+            <div class="left-side-banner">
+                <h1>Start your Journey as Influencer</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum, totam doloribus nisi corrupti maiores corporis ea similique animi nobis consequuntur.</p>
+                <button class="btn banner_btn">Prebook now <i class="fa-solid fa-arrow-right"></i></button>
+            </div>
+            <div class="right-side-banner">
+                <img class="cirle_img" src="images/Circle design.svg" alt="Circle Camera Design">
+                <img class="main_camera" src="images/main-camera.png" alt="Camera">
+            </div>
+        </div>
+     </section>
+    <!-- Banner Section End -->
     <!-- Font Awesome -->
      <script src="https://kit.fontawesome.com/12c01ddc8e.js" crossorigin="anonymous"></script>
 </body>
