sponsor section done

--- a/index.html
+++ b/index.html
@@ -42,6 +42,20 @@
         </div>
      </section>
     <!-- Banner Section End -->
+     <!-- Sponsor Section Start -->
+      <section class="container">
+        <div class="sponsor">
+            <ul class="sponsor_lists">
+                <li><img src="logos/Alibaba.svg" alt="" srcset=""></li>
+                <li><img src="logos/Amazon.svg" alt="" srcset=""></li>
+                <li><img src="logos/Daraz.pk Logo.svg" alt="" srcset=""></li>
+                <li><img src="logos/Ebay.svg" alt="" srcset=""></li>
+                <li><img src="logos/Rakuten.svg" alt="" srcset=""></li>
+                <li><img src="logos/Walmart.svg" alt="" srcset=""></li>
+            </ul>
+        </div>
+      </section>
+     <!-- Sponsor Section End -->
     <!-- Font Awesome -->
      <script src="https://kit.fontawesome.com/12c01ddc8e.js" crossorigin="anonymous"></script>
 </body>
