popular section done

--- a/index.html
+++ b/index.html
@@ -1,62 +1,196 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Influencer Gear</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <!-- Header Section Start -->
-     <header class="container">
-        <div class="header_section">
-            <div class="logo">
-                <h4 class="brand_name">Influencer products</h4>
-            </div>
-            <div class="nav">
-                <ul class="nav_lists">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Products</a></li>
-                    <li><a href="#">Inventory</a></li>
-                    <li><a href="#">Sign up</a></li>
-                    <li><a href="#">Login</a></li>
-                    <li><a href="#"><i class="fa-solid fa-magnifying-glass"></i></a></li>
-                    <li><a href="#"><i class="fa-solid fa-cart-shopping"></i></a></li>
-                </ul>
-            </div>
+    <header class="container">
+      <div class="header_section">
+        <div class="logo">
+          <h4 class="brand_name">Influencer products</h4>
         </div>
-     </header>
+        <div class="nav">
+          <ul class="nav_lists">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Products</a></li>
+            <li><a href="#">Inventory</a></li>
+            <li><a href="#">Sign up</a></li>
+            <li><a href="#">Login</a></li>
+            <li>
+              <a href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </header>
     <!-- Header Section End -->
     <!-- Banner Section Start -->
-     <section class="container">
-        <div class="banner_section">
-            <div class="left-side-banner">
-                <h1>Start your Journey as Influencer</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum, totam doloribus nisi corrupti maiores corporis ea similique animi nobis consequuntur.</p>
-                <button class="btn banner_btn">Prebook now <i class="fa-solid fa-arrow-right"></i></button>
-            </div>
-            <div class="right-side-banner">
-                <img class="cirle_img" src="images/Circle design.svg" alt="Circle Camera Design">
-                <img class="main_camera" src="images/main-camera.png" alt="Camera">
-            </div>
+    <section class="container">
+      <div class="banner_section">
+        <div class="left-side-banner">
+          <h1>Start your Journey as Influencer</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum,
+            totam doloribus nisi corrupti maiores corporis ea similique animi
+            nobis consequuntur.
+          </p>
+          <button class="btn banner_btn">
+            Prebook now <i class="fa-solid fa-arrow-right"></i>
+          </button>
         </div>
-     </section>
+        <div class="right-side-banner">
+          <img
+            class="cirle_img"
+            src="images/Circle design.svg"
+            alt="Circle Camera Design"
+          />
+          <img class="main_camera" src="images/main-camera.png" alt="Camera" />
+        </div>
+      </div>
+    </section>
     <!-- Banner Section End -->
-     <!-- Sponsor Section Start -->
-      <section class="container">
-        <div class="sponsor">
-            <ul class="sponsor_lists">
-                <li><img src="logos/Alibaba.svg" alt="" srcset=""></li>
-                <li><img src="logos/Amazon.svg" alt="" srcset=""></li>
-                <li><img src="logos/Daraz.pk Logo.svg" alt="" srcset=""></li>
-                <li><img src="logos/Ebay.svg" alt="" srcset=""></li>
-                <li><img src="logos/Rakuten.svg" alt="" srcset=""></li>
-                <li><img src="logos/Walmart.svg" alt="" srcset=""></li>
-            </ul>
+    <!-- Sponsor Section Start -->
+    <section class="container">
+      <div class="sponsor">
+        <ul class="sponsor_lists">
+          <li><img src="logos/Alibaba.svg" alt="" srcset="" /></li>
+          <li><img src="logos/Amazon.svg" alt="" srcset="" /></li>
+          <li><img src="logos/Daraz.pk Logo.svg" alt="" srcset="" /></li>
+          <li><img src="logos/Ebay.svg" alt="" srcset="" /></li>
+          <li><img src="logos/Rakuten.svg" alt="" srcset="" /></li>
+          <li><img src="logos/Walmart.svg" alt="" srcset="" /></li>
+        </ul>
+      </div>
+    </section>
+    <!-- Sponsor Section End -->
+    <!-- Popular Section Start -->
+    <section class="container popular_container">
+      <h3 class="popular_title">Popular Collection</h3>
+      <div class="popular">
+        <div class="card">
+          <div class="card_img">
+            <img src="images/tripod.png" alt="tripod" />
+          </div>
+          <div class="card_details">
+            <h4 class="card_title">Flex Tripod</h4>
+            <p class="card_price">$50.48</p>
+            <p class="card_description">Wordwide shifting</p>
+            <p class="card_description">available</p>
+            <p class="card_description">Buyers protection possible!</p>
+          </div>
         </div>
-      </section>
-     <!-- Sponsor Section End -->
+        <div class="card">
+            <div class="card_img">
+              <img src="images/tripod.png" alt="tripod" />
+            </div>
+            <div class="card_details">
+              <h4 class="card_title">Flex Tripod</h4>
+              <p class="card_price">$50.48</p>
+              <p class="card_description">Wordwide shifting</p>
+              <p class="card_description">available</p>
+              <p class="card_description">Buyers protection possible!</p>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card_img">
+              <img src="images/tripod.png" alt="tripod" />
+            </div>
+            <div class="card_details">
+              <h4 class="card_title">Flex Tripod</h4>
+              <p class="card_price">$50.48</p>
+              <p class="card_description">Wordwide shifting</p>
+              <p class="card_description">available</p>
+              <p class="card_description">Buyers protection possible!</p>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card_img">
+              <img src="images/tripod.png" alt="tripod" />
+            </div>
+            <div class="card_details">
+              <h4 class="card_title">Flex Tripod</h4>
+              <p class="card_price">$50.48</p>
+              <p class="card_description">Wordwide shifting</p>
+              <p class="card_description">available</p>
+              <p class="card_description">Buyers protection possible!</p>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card_img">
+              <img src="images/tripod.png" alt="tripod" />
+            </div>
+            <div class="card_details">
+              <h4 class="card_title">Flex Tripod</h4>
+              <p class="card_price">$50.48</p>
+              <p class="card_description">Wordwide shifting</p>
+              <p class="card_description">available</p>
+              <p class="card_description">Buyers protection possible!</p>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card_img">
+              <img src="images/tripod.png" alt="tripod" />
+            </div>
+            <div class="card_details">
+              <h4 class="card_title">Flex Tripod</h4>
+              <p class="card_price">$50.48</p>
+              <p class="card_description">Wordwide shifting</p>
+              <p class="card_description">available</p>
+              <p class="card_description">Buyers protection possible!</p>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card_img">
+              <img src="images/tripod.png" alt="tripod" />
+            </div>
+            <div class="card_details">
+              <h4 class="card_title">Flex Tripod</h4>
+              <p class="card_price">$50.48</p>
+              <p class="card_description">Wordwide shifting</p>
+              <p class="card_description">available</p>
+              <p class="card_description">Buyers protection possible!</p>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card_img">
+              <img src="images/tripod.png" alt="tripod" />
+            </div>
+            <div class="card_details">
+              <h4 class="card_title">Flex Tripod</h4>
+              <p class="card_price">$50.48</p>
+              <p class="card_description">Wordwide shifting</p>
+              <p class="card_description">available</p>
+              <p class="card_description">Buyers protection possible!</p>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card_img">
+              <img src="images/tripod.png" alt="tripod" />
+            </div>
+            <div class="card_details">
+              <h4 class="card_title">Flex Tripod</h4>
+              <p class="card_price">$50.48</p>
+              <p class="card_description">Wordwide shifting</p>
+              <p class="card_description">available</p>
+              <p class="card_description">Buyers protection possible!</p>
+            </div>
+          </div>
+      </div>
+      <p class="see_more">See More <i class="fa-solid fa-arrow-right"></i></p>
+    </section>
+    <!-- Popular Section End -->
+
     <!-- Font Awesome -->
-     <script src="https://kit.fontawesome.com/12c01ddc8e.js" crossorigin="anonymous"></script>
-</body>
+    <script
+      src="https://kit.fontawesome.com/12c01ddc8e.js"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
