--- a/index.html
+++ b/index.html
@@ -186,6 +186,20 @@
       <p class="see_more">See More <i class="fa-solid fa-arrow-right"></i></p>
     </section>
     <!-- Popular Section End -->
+    <!-- Feature Section Start -->
+     <section class="container">
+        <div class="feature">
+            <div class="feature_left_side">
+                <img src="images/gear.png" alt="Gear">
+            </div>
+            <div class="feature_right_side">
+                <h2 class="feature_title">Featured products at one place</h2>
+                <p class="feature_description">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                <button class="btn">Join Now <i class="fa-solid fa-arrow-right"></i></button>
+            </div>
+        </div>
+     </section>
+    <!-- Feature Section End -->
 
     <!-- Font Awesome -->
     <script
