--- a/index.html
+++ b/index.html
@@ -200,7 +200,21 @@
         </div>
      </section>
     <!-- Feature Section End -->
-
+     <!-- Footer Section Start -->
+      <footer class="footer">
+        <h4 class="footer_title">Influencer products</h4>
+        <p>Copyright © 2020  influencer products</p>
+        <p>All rights reserved</p>
+        <div class="social_icons">
+            <ul class="icon_lists">
+                <li><i class="fa-brands fa-instagram"></i></li>
+                <li><i class="fa-solid fa-basketball"></i></li>
+                <li><i class="fa-brands fa-twitter"></i></li>
+                <li><i class="fa-brands fa-youtube"></i></li>
+            </ul>
+        </div>
+      </footer>
+     <!-- Footer Section End -->
     <!-- Font Awesome -->
     <script
       src="https://kit.fontawesome.com/12c01ddc8e.js"
